Added authorship comments

--- a/statistical_tests.ipynb
+++ b/statistical_tests.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d1f7e251-e8c7-48ba-93fb-a0bdd2b8695b",
+   "metadata": {},
+   "source": [
+    "### Authored by Roger Xia ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "612bea4d-e365-44c4-ba1e-f062b21bbb84",
    "metadata": {},
    "source": [
