--- a/statistical_tests_full_dataset.ipynb
+++ b/statistical_tests_full_dataset.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e6ceb428-6731-4c97-8cf1-8aa5a655fae0",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Authored by Roger Xia ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "612bea4d-e365-44c4-ba1e-f062b21bbb84",
    "metadata": {},
    "source": [
