added Cathy's code

--- a/cathy.ipynb
+++ b/cathy.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "# download data from aws\n",
     "\n",
-    "# note: our collaborator Yang helped us generate the split files to ensure we used the same test set, which allowed for fair comparisons across different models\n",
+    "# note: our collaborator Yang helped us generate the split files to ensure we used the same test set, which allowed\n",
+    "for fair comparisons across different models\n",
+    "\n",
     "import csv\n",
     "\n",
     "# read split csvs\n",
